# strawberry-doc

./: .gitignore  13_query_optimizer.md  22_lasy_types.md  schema.py
django_docs/: 01_quick_start.md  02_define_types.md  03_fields.md  04_views.md  05_filters.md  06_ordering.md  07_pagination.md  08_queries.md  09_mutations.md  10_subscriptions.md  11_settings.md  12_faq.md  14_permissions.md  15_relay.md
doc/: 01_getting_started.md  03_queris.md  04_mutations.md  10_schema.md  11_operation_directives.md  12_schema_directives.md  15_object_types.md  16_interfaces.md  17_input_types.md  18_enums.md  19_generics.md  21_union_types.md  22_exceptions.md  24_schema_codegen.md  25_query_codegen.md
docs/: 02_schema_basic.md  05_subscriptions.md  06_why.md  09_faq.md  13_schema_configurations.md  14_scalars.md  17_input_types.md  20_resolvers.md  23_private_external_fields.md  26_extensions.md  27_errors.md  28_accessing_parent_data.md  29_authentication.md  30_data_loaders.md  31_dealing_with_errors.md  32_federation.md  33_federation_v1.md  34_relay.md
strawberry-demo/: requirements.txt
strawberry-django-demo/: pyproject.toml
strawberry-django-demo/demo/: settings.py  urls.py
strawberry-django-demo/fruits/: admin.py  models.py  schema.py  types.py
strawberry-django-demo/fruits/fixtures/: colors.json  fruits.json
strawberry-django-demo/fruits/migrations/: 0001_initial.py
